# tunix

./: .gitignore  Dockerfile  README.md  project_structure.md  pyproject.toml
.github/workflows/: build_and_test_tunix_nightly_regression.yml  cpu-tests.yml  tpu-nightly-regression.yml  tpu-tests.yml
docs/: agentic_rl.md  design.md  launching.md  metrics.md  performance.md  quickstart.md  reliability.md  rollout.md
examples/: grpo_demo.ipynb  grpo_demo_test.ipynb  logit_distillation.ipynb  qlora_demo.ipynb  tpu_utils.sh
examples/agentic/: qwen3_grpo_gsm8k_demo.py
examples/deepscaler/: math_eval_nb.py  run_deepscaler_disagg_v5p16.sh  train_deepscaler_nb.py
examples/deepswe/: run_deepswe_disagg_v5p_32.sh  swe_agent.py  swe_env.py  train_deepswe_nb.py
examples/frozenlake/: agent.py  data.py  env.py  run_gemma4_e2b.sh  train_frozenlake.py  train_frozenlake_qwen3.py
examples/math_gsm8k/: gemma_grpo_demo_nb.py  qwen3_grpo_demo.py
scripts/: checkpointing_repro.py  get_maxtext_model.py  grpo_demo_llama3.py  grpo_demo_llama3_qwen2.py  install_tunix_vllm_requirement.sh  llama3_example.py  maxtext_model_with_vllm.ipynb  setup_notebook_tpu_single_host.sh
tests/cli/: base_rl_pipeline_test.py  config_test.py  grpo_main_test.py
tests/generate/: beam_search_test.py  sampler_test.py  utils_test.py  vllm_driver_test.py  vllm_sampler_test.py
tests/models/: automodel_test.py  flash_attention_cache_test.py  naming_test.py  safetensors_loader_test.py
tests/processors/: audio_processor_test.py  image_processor_test.py
tests/rl/: algo_core_test.py  algorithm_config_test.py  common_test.py  function_registry_test.py  reward_manager_test.py  rl_cluster_test.py
tests/sft/: checkpoint_manager_test.py  checkpoint_options_test.py  peft_trainer_test.py  profiler_test.py  sft_tpu_smoke_test.sh  system_metrics_calculator_test.py
tests/smoke_tests/: model_creation_test.py
tests/utils/: mesh_test.py  mesh_utils_test.py  token_sanitization_test.py  topology_test.py
tunix/: __init__.py
tunix/cli/: base_agentic_config.yaml  base_config.yaml  base_rl_pipeline.py  config.py  grpo_main.py  peft_main.py
tunix/distillation/: distillation_trainer.py
tunix/generate/: base_sampler.py  mappings.py  sampler.py  tokenizer_adapter.py  utils.py  vllm_async_driver.py  vllm_sampler.py
tunix/models/: automodel.py  naming.py  registry.py  safetensors_loader.py  safetensors_saver.py
tunix/oss/: utils.py
tunix/perf/: export.py
tunix/processors/: audio_processor.py  image_processor.py
tunix/rl/: algo_core.py  algorithm_config.py  common.py  function_registry.py  reshard.py  reward_manager.py  rl_cluster.py  rl_learner.py  trainer.py  utils.py
tunix/sft/: checkpoint_manager.py  checkpoint_options.py  hooks.py  metrics_logger.py  peft_trainer.py  profiler.py  progress_bar.py  (+1 more)
(+120 files in other folders)
